Added new scripts

--- a/configs/Configuration.properties
+++ b/configs/Configuration.properties
@@ -3,6 +3,7 @@ browser=chrome
 windowMaximize=true
 driverPath=/usr/local/bin/chromedriver
 implicitlyWait=20
-url=https://wordpress.com/log-in?redirect_to=https%3A%2F%2Fwordpress.com%2F
+wordpressurl=https://wordpress.com/log-in?redirect_to=https%3A%2F%2Fwordpress.com%2F
+automationstoreurl=http://automationpractice.com/index.php
 testDataResourcePath=src/test/resources/testDataResources/
 #reportConfigPath=C:/ToolsQA/CucumberFramework/configs/extent-config.xml
