--- a/pom.xml
+++ b/pom.xml
@@ -1,98 +1,104 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>Selenium-Cucumber-Maven</groupId>
-  <artifactId>Selenium-Cucumber-Maven</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>Selenium-Cucumber-Maven</groupId>
+	<artifactId>Selenium-Cucumber-Maven</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-  <dependencies>
-     <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-testng</artifactId>
-            <version>1.2.5</version>
-        </dependency>
-     <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-	 <dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>4.12</version>
-	    <scope>test</scope>
-	 </dependency>
-     <dependency>
-	    <groupId>org.seleniumhq.selenium</groupId>
-	    <artifactId>selenium-java</artifactId>
-	    <version>3.7.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-java</artifactId>
-	    <version>1.2.5</version>
-	</dependency>
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-jvm-deps</artifactId>
-	    <version>1.0.5</version>
-	    <scope>provided</scope>
-	</dependency>
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-junit</artifactId>
-	    <version>1.2.5</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>info.cukes</groupId>
-	    <artifactId>cucumber-picocontainer</artifactId>
-	    <version>1.2.5</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>com.aventstack</groupId>
-	    <artifactId>extentreports</artifactId>
-	    <version>3.1.2</version>
-	</dependency>
-	<dependency>
-	    <groupId>com.vimalselvam</groupId>
-	    <artifactId>cucumber-extentsreport</artifactId>
-	    <version>3.0.2</version>
-	</dependency>
-  </dependencies>
-  
-  
-    <build>
-	    <plugins>
-		  <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-testng</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
 			<version>3.7.0</version>
-			<configuration>
-			  <source>1.8</source>
-			  <target>1.8</target>
-			   <encoding>UTF-8</encoding>
-			</configuration>
-		  </plugin>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-jvm-deps</artifactId>
+			<version>1.0.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.2.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>info.cukes</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>1.2.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.vimalselvam</groupId>
+			<artifactId>cucumber-extentsreport</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+	</dependencies>
+
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
 				<configuration>
-				<includes>
-                <include>**/*TestRunner.java</include>
-				</includes>
-                        <!-- <systemPropertyVariables> <xmlFiles>>${xmlFiles}</xmlFiles> <url>${url}</url> 
+					<includes>
+						<include>**/*TestRunner.java</include>
+					</includes>
+					<!-- <systemPropertyVariables> <xmlFiles>>${xmlFiles}</xmlFiles> <url>${url}</url> 
 						<executionBrowser>${browser}</executionBrowser> </systemPropertyVariables> 
 						<suiteXmlFiles> <suiteXmlFile>XMLFiles/${xmlFiles}</suiteXmlFile> </suiteXmlFiles> -->
 
 				</configuration>
 			</plugin>
-      	</plugins>
-  	</build>
-  
+		</plugins>
+	</build>
+
 </project>
